style.css
body {
  max-width: 100%;
  overflow-x: hidden;
}

p {
  font-family: roboto, sans-serif;
}

.first-nav {
  display: flex;
  justify-content: space-between;
  background-color: black;
  padding: -3px;
}

.left-ul,
.right-ul {
  display: flex;
  gap: 12px;
}

.left-nav-li,
.right-nav-li {
  color: gray;
}

.left-ul {
  margin-left: -45px;
}

li,
a {
  text-decoration: none;
  list-style: none;
}

#first-nav-left {
  margin-left: 20px;
}

#first-nav-right {
  margin-right: 20px;
}

.search-icon {
  border-left: 1px solid rgba(128, 128, 128, 0.329);
  margin-right: 20px;
  text-align: center;
  align-self: center;
  padding: 15px;
}

#second-nav {
  display: grid;
  grid-template-columns: 100px auto 70px;
  grid-template-rows: 50px;
  position: sticky;
  top: 0;
  z-index: 50;
  background-color: white;
  border-bottom: 1px solid rgba(128, 128, 128, 0.233);
  margin-bottom: -35px;
}

#nav-logo {
  position: relative;
  top: 0;
  left: 0;
  height: auto;
  width: 80px;
  padding: 20px;
  background-color: black;
  align-self: center;
}

.second-nav-left-ul {
  display: flex;
  position: relative;
  top: 0;
  left: 0;
  gap: 12px;
}

.second-nav-right-li {
  color: gray;
}

main {
  padding-top: 50px;
}

#main-articles {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas: "a a b""a a c";
  gap: 10px;
  width: 100%;
  height: 450px;
  margin-bottom: -15px;
}

#source1 {
  grid-area: a;
  background: linear-gradient(to bottom, rgba(255, 0, 0, 0.596), rgba(128, 128, 128, 0.342)), url("assets/Galaxy-hed-796x419.jpg");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: auto;
  width: 100%;
  position: relative;
}

.logo {
  position: absolute;
  width: 360px;
  height: 112px;
  left: 0;
  top: 0;
  padding: 20px;
}

.date {
  position: absolute;
  top: 0;
  right: 0;
  padding: 20px;
  color: rgb(231, 229, 229);
  font-weight: 600;
  font-size: 14px;
  text-align: left;
}

#source2 {
  background:
    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 100)),
    url("assets/Eye-strain-screen-time-hed-368x276.jpg");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: auto;
  width: 100%;
  grid-area: b;
  position: relative;
}

#source3 {
  background:
    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 100)),
    url("assets/Sleep-hed-796x419.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: auto;
  width: 100%;
  position: relative;
  grid-area: c;
}

.source-small-grid {
  position: absolute;
  left: 0;
  bottom: 0;
  padding: 15px;
}

.source {
  font-size: 14px;
  font-weight: lighter;
  font-family: roboto, sans-serif;
  color: white;
  text-align: left;
  margin: 0;
}

#main-title {
  font-size: 56px;
  font-weight: bolder;
  font-family: roboto, sans-serif;
  color: white;
  text-align: left;
  padding: 0;
  margin: 0;
}

.main-title-small {
  font-size: 28px;
  font-weight: bolder;
  font-family: roboto, sans-serif;
  color: white;
  text-align: left;
  padding: 0;
  margin: 0;
}

.main-author {
  color: grey;
  font-size: 12px;
  text-align: left;
  font-weight: 400;
  margin: 0;
}

.subtitle {
  color: red;
  font-weight: 600;
  font-size: 35px;
  margin-bottom: -90px;
}

section {
  margin-left: 10%;
  margin-right: 10%;
}

/* latest funding */

#latest-funding-header {
  display: flex;
  justify-content: space-between;
  width: 70%;
  margin-bottom: -10px;
  margin-top: -70px;
}

.category-item-mostpopular > p {
  margin-bottom: 0;
}

.latest-article1 > a > p {
  font-size: 20px;
  color: white;
  font-weight: bolder;
}

#latest-title {
  color: red;
  font-size: 25px;
  font-weight: 600;
  font-family: roboto, sans-serif;
}

#latest-funding-categories {
  padding-top: 25px;
}

#latest-funding-categories > p {
  color: red;
  font-size: 13px;
  float: left;
  margin-left: 15px;
}

#latest-funding-categories-border {
  border-left: 2px red solid;
  border-right: 2px red solid;
  padding-left: 10px;
  padding-right: 10px;
}

#latest-funding-section {
  max-width: 100%;
  height: auto;
  display: grid;
  grid-template-columns: repeat(4, 22.5%);
  grid-template-rows: 1fr;
  gap: 25px;
  margin-left: 10%;
  margin-right: 10%;
}

.latest-funding {
  width: 100%;
  height: 291px;
}

.latest-item {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: repeat(2, 50px);
  width: 100%;
  height: 100px;
}

.funding-image {
  width: auto;
  height: 70px;
  grid-area: 1/1/2/2;
  z-index: 5;
  padding-top: 15px;
  padding-left: 10px;
}

.latest-article1 {
  grid-area: 1/1/2/5;
  background-color: #f42;
  display: grid;
  grid-template-columns: repeat(3, 33.3%);
}

.latest-article1 > a {
  width: auto;
  color: white;
  grid-area: 2/2/3/4;
  margin-left: 20px;
}

.latest-article-bottom {
  color: #555;
  font-size: 12px;
  font-family: roboto, sans-serif;
}

.latestarticlepriceandbrand {
  width: auto;
  background-color: #ff442214;
  grid-area: 2/1/2/5;
  height: 50px;
}

.latestarticlepriceandbrand > ul {
  margin-left: 65px;
  margin-top: 0;
}

.funding-series {
  margin-top: 0;
  font-size: 11px;
  font-weight: 600;
  color: gray;
}

.funding-price {
  font-size: 20px;
  font-weight: 600;
  margin-bottom: 0;
}

.latest-article1b {
  display: grid;
  background-color: #fffaf8;
  justify-content: start;
  margin-left: -35px;
}

.tag {
  margin-bottom: 15px;
  list-style: none;
}

.portfolio {
  list-style: none;
  border-bottom: 2px #ff442214 solid;
}

.tag-text {
  color: #555;
  font-size: 13px;
}

.latest-article-title {
  background-color: rgb(223, 54, 54);
  color: white;
  font-weight: 500;
  position: absolute;
  z-index: 2;
  margin-left: 50px;
}

.latest-article-span {
  color: #aaa;
  font-size: 12px;
}

#categories-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  max-width: 100%;
  grid-gap: 25px;
}

.category-item {
  position: relative;
  max-width: 406px;
  margin-top: 60px;
  width: 100%;
}

.category-item::after {
  content: '';
  padding-bottom: 100%;
  max-width: 100%;
}

.category-item-mostpopularimage {
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 276px;
}

.category-item-mostpopularimage-gradient {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 276px;
}

.category-item-title {
  font-size: 28px;
  color: red;
  font-weight: bolder;
  padding: 10px 0;
  margin: 0;
}

.category-item-mostpopular {
  height: 276px;
  width: 100%;
}

.category-item-mostpopular-category,
.category-item-mostpopular-title {
  padding-top: 150px;
  position: absolute;
  color: white;
}

.category-item-mostpopular-author {
  padding-top: 200px;
  position: absolute;
  color: gray;
}

.category-item-mostpopular-time {
  padding-top: 225px;
  position: absolute;
  color: gray;
}

.category-item-mostpopular-category {
  padding-top: 125px;
  font-size: 14px;
  color: white;
}

.category-item-latest {
  display: grid;
  grid-template-columns: 3fr 1fr;
  background-color: #ff442214;
  position: relative;
  height: 89px;
}

.category-item-latest-category {
  margin-bottom: 3px;
  margin-left: 20px;
  color: #f42;
  font-size: 13px;
}

.category-item-latest-title {
  margin-top: 0;
  margin-left: 10px;
  color: #f42;
  font-size: 14px;
  font-weight: bolder;
}

.category-item-latest-image {
  width: 100px;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
}

.category-item-list > li {
  list-style-type: none;
  border-bottom: 1px rgba(128, 128, 128, 0.301) solid;
  padding-bottom: 5px;
  padding-top: 5px;
}

.category-item-list > li::before {
  content: "\2022";
  color: red;
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}

.latest-news {
  margin-top: 100px;
  margin-bottom: 100px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 10px;
  max-width: 100%;
}

.latest-news-article {
  max-width: 300px;
}

.latest-news-article > img {
  max-width: 100%;
  height: auto;
}

.latest-title {
  font-weight: 700;
  font-size: 19px;
}

.latest-deals {
  padding: 5px;
  font-size: 00.9rem;
  color: #555;
  font-family: roboto, sans-serif;
}

.cross {
  text-decoration: line-through;
  color: #aaa;
}

footer {
  margin-left: -10px;
  margin-bottom: -20px;
  background-color: black;
  text-align: center;
  bottom: 0;
  left: 0;
}

#footer-list {
  padding-top: 40px;
}

#footer-list > li {
  list-style: none;
  display: inline;
  padding-right: 15px;
}

#footer-social-media > ul > li {
  color: white;
  display: inline;
  list-style-type: none;
  margin-left: 30px;
}

#footer-list > li > a > i {
  height: 30px;
  width: 30px;
  border-radius: 100%;
  background-color: grey;
  color: white;
}

#footer-bottom {
  display: grid;
  margin-left: 25%;
  max-width: 50%;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: -150px;
}

#footer-bottom p {
  color: white;
}

#footer-bottom img {
  height: 15px;
  width: auto;
}

@media (max-width: 1024px) {
  #categories-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  #second-nav {
    grid-template-columns: 100px auto 70px;
    grid-template-rows: 50px;
    grid-template-areas: "a b c";
  }

  .search-icon {
    grid-area: c;
  }

  .second-nav-left-ul {
    visibility: hidden;
    display: none;
  }

  #source1 {
    background: url("assets/Galaxy-hed-796x419.jpg");
  }

  .logo {
    visibility: hidden;
    display: none;
  }

  #main-title {
    font-size: 40px;
  }

  .main-title-small {
    font-size: 20px;
  }

  #latest-funding-section {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 25px;
  }

  #personio-funding {
    visibility: hidden;
    display: none;
  }

  .latest-news {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 10px;
  }

  #footer-bottom {
    display: grid;
    margin-left: 25%;
    max-width: 50%;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    gap: -150px;
  }
}

@media (max-width: 750px) {
  .first-nav {
    visibility: hidden;
    display: none;
  }

  #main-articles {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas: "a""b""c";
    gap: 10px;
    position: relative;
    width: 100%;
    height: 510px;
  }

  #source1 {
    grid-area: a;
    background: url("assets/Galaxy-hed-796x419.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100%;
  }

  #source2 {
    grid-area: b;
  }

  #source3 {
    grid-area: 3/1/4/5;
  }

  #categories-grid {
    display: grid;
    grid-template-columns: 1fr;
  }

  #latest-funding-section {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 25px;
    width: 80%;
    height: auto;
  }

  #personio-funding {
    visibility: hidden;
    display: none;
  }

  .latest-news {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-columns: 1fr;
    margin-top: 0;
    width: 100%;
    gap: 5px;
  }

  .latest-news-article {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    height: 80px;
    max-width: 100%;
    gap: 5px;
  }

  .latest-news-article > img {
    width: 40%;
  }

  .latest-news-text {
    width: 95%;
    height: auto;
    margin-left: -100px;
  }

  #footer-bottom {
    display: grid;
    margin-left: 25%;
    max-width: 50%;
    grid-template-columns: 1fr;
    gap: -150px;
  }
}

